# Time-Tracker

./: .gitignore  README.md  README.rst  bond.db  database.db  requirements.txt  settings  settings.json  setup.cfg  setup.py
export/: export_2022_07_11_17_52_10.html  export_2022_07_11_21_05_43.html  export_2022_07_12_21_06_46.html
lib/cli/: console.py
lib/database/: database.py  queries.py
lib/database/models/: model.py  task.py  taskname.py
lib/database/types/: date_range.py  task.py  task_view.py
lib/export/: csv_exporter.py  exporter.py  html_exporter.py
lib/export/templates/: content.html  content.py  main.py  template.html
lib/menu/: base.py  item.py  main.py  settings.py  tasks.py  tasks_table_menu.py  view_menu.py
lib/menu/actions/: action.py  addTask.py  add_task.py  changeTask.py  default.py  delete_task.py  exit.py  main.py  pagination_mode.py  remove_task.py  settings.py  showTasks.py  tasks.py  update_task.py  view_task.py
lib/menu/decorators/: __init__.py
lib/menu/tables/: task.py
lib/settings/: settings.py
lib/tracker/: __init__.py  base.py  database.py  release.py
lib/utils/: date.py
tests/: test_tracker.py
tracker/: __init__.py  __main__.py  cli.py  tracker.py
