# Minimum target setuptools 39.2.0

[metadata]
name = time-tracker
version = 1.0.0
description = Time Tracker
long_description = file: README.rst
author = Sam
author_email = samfredrickson041@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Users
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: UNIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
